test/compilable/test11595.d
import imports.test11595a;

static assert([__traits(allMembers, imports.test11595a)] == ["object", "imports.test11595b", "Foo"]);