test/fail_compilation/fail255.d

const int[] table = mixin("[1,]");
